--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,9 @@ authors = ["Eh2406 <YeomanYaacov@gmail.com>"]
 
 [dependencies]
 winapi = "0.2.4"
+# this neads to be rplaced with one form git #c492982d38592544f6e66cd3278c760b79741367
+# using paths = [" ... \\winapi"] in a .cargo/config
+# untill the 0.2.5
 ole32-sys = "0.2.0"
+user32-sys = "0.1.2"
 clipboard-win = "1.6.1"
