--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ authors = ["Eh2406 <YeomanYaacov@gmail.com>"]
 winapi = "0.2.5"
 ole32-sys = "0.2.0"
 user32-sys = "0.1.2"
+kernel32-sys = "0.2.1"
 clipboard-win = "1.6.2"
 rustc-serialize = "0.3"
