--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ user32-sys = "0.1.2"
 kernel32-sys = "0.2.1"
 clipboard-win = "1.7.1"
 rustc-serialize = "0.3"
+preferences = "0.5.0"
 
 unicode-segmentation = "0.1.2"
