--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ kernel32-sys = "0.2.1"
 clipboard-win = "1.7.1"
 rustc-serialize = "0.3"
 preferences = "0.5.0"
-
+quickcheck = "0.2.27"
 unicode-segmentation = "0.1.2"
