--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ kernel32-sys = "0.2.2"
 clipboard-win = "1.7.1"
 rustc-serialize = "0.3"
 preferences = "0.5.0"
-quickcheck = "0.2.27"
 unicode-segmentation = "0.1.2"
 regex = "0.1.69"
 lazy_static = "0.1.*"
+
+[dev-dependencies]
+quickcheck = "0.2.27"
