--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,16 @@ version = "0.1.0"
 authors = ["Eh2406 <YeomanYaacov@gmail.com>"]
 
 [dependencies]
-winapi = "0.2.6"
+winapi = "0.2"
 ole32-sys = "0.2.0"
-user32-sys = "0.1.2"
+user32-sys = "0.2.0"
 kernel32-sys = "0.2.2"
-clipboard-win = "1.7.1"
+clipboard-win = "=1.7" # uptate to 1.8
 rustc-serialize = "0.3"
-preferences = "0.5.0"
-unicode-segmentation = "0.1.2"
-regex = "0.1.69"
-lazy_static = "0.1.*"
+preferences = "0.6.0" # uptate to 0.7 and to 1.1 with serde
+unicode-segmentation = "1.1.0"
+regex = "0.2"
+lazy_static = "0.2.8"
 
 [dev-dependencies]
-quickcheck = "0.2.27"
+quickcheck = "0.4.1"
