--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ winapi = "0.2"
 ole32-sys = "0.2.0"
 user32-sys = "0.2.0"
 kernel32-sys = "0.2.2"
-clipboard-win = "=1.7" # uptate to 1.8
+clipboard-win = "2.0.0"
 rustc-serialize = "0.3"
 preferences = "0.6.0" # uptate to 0.7 and to 1.1 with serde
 unicode-segmentation = "1.1.0"
