--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,9 @@ ole32-sys = "0.2.0"
 user32-sys = "0.2.0"
 kernel32-sys = "0.2.2"
 clipboard-win = "2.0.0"
-rustc-serialize = "0.3"
-preferences = "0.6.0" # uptate to 0.7 and to 1.1 with serde
+serde_derive = "0.9.13"
+serde = "0.9.13"
+preferences = "1.1.0"
 unicode-segmentation = "1.1.0"
 regex = "0.2"
 lazy_static = "0.2.8"
