--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ serde = "0.9.13"
 preferences = "1.1.0"
 unicode-segmentation = "1.1.0"
 regex = "0.2"
-lazy_static = "0.2.8"
+itertools = "0.6.0"
 
 [dev-dependencies]
 quickcheck = "0.4.1"
+lazy_static = "0.2.8"
