--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,21 +4,21 @@ version = "0.1.0"
 authors = ["Eh2406 <YeomanYaacov@gmail.com>"]
 
 [dependencies]
-winapi = "0.2"
-ole32-sys = "0.2.0"
-user32-sys = "0.2.0"
-kernel32-sys = "0.2.2"
-clipboard-win = "2.0.0"
-serde_derive = "0.9.13"
-serde = "0.9.13"
-preferences = "1.1.0"
-unicode-segmentation = "1.1.0"
-regex = "0.2"
-itertools = "0.6.0"
+winapi = "*"
+ole32-sys = "*"
+user32-sys = "*"
+kernel32-sys = "*"
+clipboard-win = "*"
+serde_derive = "*"
+serde = "*"
+preferences = { git = "https://github.com/Eh2406/preferences-rs", branch = "patch-1"}
+unicode-segmentation = "*"
+regex = "*"
+itertools = "*"
 
 [dev-dependencies]
-quickcheck = "0.4.1"
-lazy_static = "0.2.8"
+quickcheck = "*"
+lazy_static = "*"
 
 [profile.release]
 debug = true
