better time estimator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ preferences = { git = "https://github.com/Eh2406/preferences-rs", branch = "patc
 unicode-segmentation = "*"
 regex = "*"
 itertools = "*"
+average = "*"
 chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
