--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "rust_reader"
 version = "0.1.0"
+license = "MIT OR Apache-2.0"
 authors = ["Eh2406 <YeomanYaacov@gmail.com>"]
 edition = "2018"
 
