--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,14 +3,21 @@ name = "rust_reader"
 version = "0.1.0"
 license = "MIT OR Apache-2.0"
 authors = ["Eh2406 <YeomanYaacov@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 winapi = { version = "*", features = ["std", "winerror", "commctrl", "processthreadsapi", "combaseapi", "shellapi", "objbase", "wincon", "winuser", "sapi", "sapi51", "sapi53"] }
 windows = { version = "*", features = [
     "Win32_Foundation",
+    "Win32_Graphics_Gdi",
+    "Win32_Media_Speech",
+    "Win32_System_Com",
+    "Win32_System_Console",
     "Win32_System_Threading",
+    "Win32_System_WindowsProgramming",
+    "Win32_UI_Controls",
     "Win32_UI_Input_KeyboardAndMouse",
+    "Win32_UI_Shell",
     "Win32_UI_WindowsAndMessaging"
 ] }
 clipboard-win = "*"
