--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ windows = { version = "*", features = [
     "Win32_Media_Speech",
     "Win32_System_Com",
     "Win32_System_Console",
+    "Win32_System_SystemServices",
     "Win32_System_Threading",
     "Win32_System_WindowsProgramming",
     "Win32_UI_Controls",
