--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,7 @@ authors = ["Eh2406 <YeomanYaacov@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-winapi = { version = "*", features = ["std", "winerror", "commctrl", "processthreadsapi", "combaseapi", "shellapi", "objbase", "wincon", "winuser", "sapi", "sapi51", "sapi53"] }
-windows = { version = "*", features = [
+windows = { version = "0.46.0", features = [
     "Win32_Foundation",
     "Win32_Graphics_Gdi",
     "Win32_Media_Speech",
