--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ windows = { version = "0.46.0", features = [
     "Win32_Media_Speech",
     "Win32_System_Com",
     "Win32_System_Console",
+    "Win32_System_LibraryLoader",
     "Win32_System_SystemServices",
     "Win32_System_Threading",
     "Win32_System_WindowsProgramming",
