--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ winres = "0.1.12"
 
 [dev-dependencies]
 quickcheck = "1.0.3"
-lazy_static = "1.4.0"
+once_cell = "1.18.0"
 
 [profile.release]
 debug = true
